add case with -XX:+UseCGroupMemoryLimitForHeap